"In Front" (X-Ray) doesn't work with wire objects #65755

Closed
opened 2019-06-12 15:29:16 +02:00 by Demeter Dzadik · 5 comments
Member

System Information
Operating system: Win10 v1607
Graphics card: GTX 1070

Blender Version
Broken: 2.80, 81b68f7279
Worked: 2.79

Short description of error
Objects that are set to display as Wire don't seem to be affected by the "In Front" option under object display settings in 2.80. I checked in a build as old as April 30 and the issue was still present, so it might've been around since the start.

tRPoz7i.png
jYvKFlU.png

My use case is that the wire object is used for physics, and is inside my character mesh, and I need to see it to easily be able to select it.

**System Information** Operating system: Win10 v1607 Graphics card: GTX 1070 **Blender Version** Broken: 2.80, 81b68f7279cd Worked: 2.79 **Short description of error** Objects that are set to display as Wire don't seem to be affected by the "In Front" option under object display settings in 2.80. I checked in a build as old as April 30 and the issue was still present, so it might've been around since the start. ![tRPoz7i.png](https://archive.blender.org/developer/F7100232/tRPoz7i.png) ![jYvKFlU.png](https://archive.blender.org/developer/F7100234/jYvKFlU.png) My use case is that the wire object is used for physics, and is inside my character mesh, and I need to see it to easily be able to select it.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-06-17 15:59:42 +02:00

Seems like In Front works for every mode EXCEPT wire.

Seems like `In Front` works for every mode EXCEPT wire.

This issue was referenced by e47ce1f2d6

This issue was referenced by e47ce1f2d6d7df814bd6498ae7b881989510395f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65755
No description provided.